<resources>
    <string name="app_name">Сервисный Центр</string>
    <string name="login_in_app">Войти в приложение</string>
    <string name="login">Логин</string>
    <string name="input_name">Введите имя</string>
    <string name="password">Пароль</string>
    <string name="input_password">Введите пароль</string>
    <string name="input">Войти</string>
    <string name="search">Поиск</string>
    <string name="Client">Клиенты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addClient">Добавить клиента</string>
    <string name="new_client">Новый клиент</string>
    <string name="sozdat">Создать</string>
    <string name="Profil">Профиль клиента</string>
    <string name="nameClient">Введите Ф.И.О</string>
    <string name="e_mail">Введите E_mail</string>
    <string name="phone">Введите номер телефона</string>
    <string name="Remont">Ремонт</string>
    <string name="AddOrder">Добавить заказ</string>
    <string name="NewOrder">Новый заказ</string>
    <string name="discription_problem">Описание проблемы</string>
    <string name="DateStart">Дата начала ремонта</string>
    <string name="DateEnd">Дата окончания ремонта</string>
    <string name="description_condition">Описание состояния</string>
    <string name="ProfilOrder">Профиль заказа</string>
    <string name="titleStatys1">Ожидает ремонта</string>
    <string name="titleStatys2">Ремонтируется</string>
    <string name="titleStatys3">Ремонт завершен</string>
</resources>