<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentFormOrder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="@color/siniy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/button_nazad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/siniy"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/fioClientOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/NewOrder"
                android:textColor="@color/white"
                android:textSize="19dp"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:id="@+id/btnCreateOrder"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:minHeight="25dp"
                app:cardCornerRadius="50dp"
                tools:ignore="TouchTargetSizeCheck">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sozdat"
                    android:textColor="@color/siniy"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/Profil"
                android:textStyle="bold"/>


            <ImageView
                android:id="@+id/fotoClient"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/buttonFoto"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="#7CAFEB"
                app:cardCornerRadius="8dp"
                tools:ignore="SpeakableTextPresentCheck">

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">


                    <ImageView

                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_baseline_photo_camera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#7CAFEB"
                app:cardCornerRadius="8dp">


                <Spinner
                    android:id="@+id/spinnerСategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#7CAFEB"
                app:cardCornerRadius="8dp">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">


                    <EditText
                        android:id="@+id/etDiscriptionСondition"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:autofillHints="name"
                        android:background="@android:color/transparent"
                        android:hint="@string/description_condition"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="#E4E4E4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#7CAFEB"
                app:cardCornerRadius="8dp">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">


                    <EditText
                        android:id="@+id/etDiscriptionProblem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:autofillHints="name"
                        android:background="@android:color/transparent"
                        android:hint="@string/discription_problem"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="#E4E4E4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#7CAFEB"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">


                    <EditText
                        android:id="@+id/etDateStart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:autofillHints="name"
                        android:background="@android:color/transparent"
                        android:hint="@string/DateStart"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="#E4E4E4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#7CAFEB"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">


                    <EditText
                        android:id="@+id/etDateEnd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:autofillHints="name"
                        android:background="@android:color/transparent"
                        android:hint="@string/DateEnd"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="#E4E4E4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>